[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cw-node-helper"
version = "5.3.0"
description = "CoreWeave DCT terminal companion — Jira + NetBox + Grafana queue browser"
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0"]
license = {text = "MIT"}

[project.scripts]
cwhelper = "get_node_context:main"
